--- a/src/main/resources/static/web/buy-sell.html
+++ b/src/main/resources/static/web/buy-sell.html
@@ -275,6 +275,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="../lib/buy-sell.js"></script>
 		<footer class="p-4 d-flex footer justify-content-between align-items-center">
 			<div class="col-5">
