--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -319,7 +319,7 @@
 									</p>
 									<p class="mb-3 card-text">Transactions: {{person.transactions.length}}</p>
 								</div>
-								<div class="ms-2 me-2 d-flex justify-content-between">
+								<div class="ms-2 me-2 d-flex flex-wrap justify-content-between">
 									<div class="d-flex ms-1">
 										<button class="p-2" @click="link(person)"><b>See Transactions</b></button>
 										<button class="p-2 ms-2 deleteCard" @click="hiddeAccount(person.id)">
