--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -297,7 +297,7 @@
 							<h3><b>TOTAL BALANCE</b></h3>
 							<h4>${{totalBalance}}</h4>
 						</div>
-						<div class="mt-4 container d-flex flex-wrap">
+						<div class="mt-4 d-flex flex-wrap">
 							<div
 								class="mb-3 me-4 card-body rounded shadow"
 								v-for="person in accounts"
