--- a/src/main/resources/static/web/loan-application.html
+++ b/src/main/resources/static/web/loan-application.html
@@ -231,7 +231,7 @@
 					</svg>
 				</p>
 			</div>
-			<main class="d-flex flex-column justify-content-center justify-content-between">
+			<main class="d-flex flex-column">
 				<ul class="nav nav-tabs ms-0 mb-3" id="pestania">
 					<li class="nav-item">
 						<a class="nav-link" href="accounts.html">Accounts</a>
@@ -249,7 +249,7 @@
 						<a class="nav-link" href="help.html">Help</a>
 					</li>
 				</ul>
-				<div class="d-flex align-items-center">
+				<div class="d-flex align-items-center container-main">
 					<div class="container d-flex justify-content-center">
 						<form id="formulario-tarjeta" class="formulario-tarjeta">
 							<!-- <div class="group d-flex justify-content-around tipo">
