--- a/src/main/resources/static/web/loan-application.html
+++ b/src/main/resources/static/web/loan-application.html
@@ -249,7 +249,7 @@
 						<a class="nav-link" href="help.html">Help</a>
 					</li>
 				</ul>
-				<div class="d-flex align-items-center container-main">
+				<div class="d-flex align-items-center container-form">
 					<div class="container d-flex justify-content-center">
 						<form id="formulario-tarjeta" class="formulario-tarjeta">
 							<!-- <div class="group d-flex justify-content-around tipo">
