--- a/src/main/resources/static/web/transfers.html
+++ b/src/main/resources/static/web/transfers.html
@@ -253,7 +253,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="d-flex align-items-center">
+				<div class="d-flex align-items-center container-form">
 					<div class="container d-flex justify-content-center">
 						<form id="formulario-tarjeta" class="formulario-tarjeta">
 							<div class="group d-flex justify-content-around align-items-center tipo">
@@ -284,7 +284,9 @@
 									</option>
 									<option v-else>{{current.number}}</option>
 								</select>
-								<p class="ms-2 mb-0 col-1" v-if="balance.length > 0">$ {{balance[0].balance.toFixed(2)}}</p>
+								<p class="ms-2 mb-0 col-1" v-if="balance.length > 0">
+									$ {{balance[0].balance.toFixed(2)}}
+								</p>
 								<p class="transferAll ms-2 mb-0" v-if="balance.length > 0" @click="transferAll()">
 									Transfer All
 								</p>
