--- a/src/main/resources/static/web/buy-sell.html
+++ b/src/main/resources/static/web/buy-sell.html
@@ -249,7 +249,7 @@
 						<a class="nav-link" href="help.html">Help</a>
 					</li>
 				</ul>
-				<div class="container d-flex justify-content-center">
+				<div class="d-flex justify-content-center">
 					<div class="p-5 container contenedor1 d-flex justify-content-around">
 						<div class="buy d-flex flex-column justify-content-around align-items-center">
 							<p>Buy</p>
