--- a/src/main/resources/static/web/cards.html
+++ b/src/main/resources/static/web/cards.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -38,7 +45,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -203,7 +215,9 @@
 				</div>
 			</header>
 			<main>
-				<div class="d-flex justify-content-end align-items-center mt-2 me-3 form-check form-switch">
+				<div
+					class="d-flex justify-content-end align-items-center mt-2 me-3 form-check form-switch"
+				>
 					<input
 						class="form-check-input"
 						type="checkbox"
@@ -228,7 +242,9 @@
 							<path
 								d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
 							/>
-							<path d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2" />
+							<path
+								d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
+							/>
 							<path d="M19 11h2m-1 -1v2" />
 						</svg>
 					</p>
@@ -273,7 +289,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="ms-5 d-flex flex-wrap" v-if="cards.length > 0">
+				<div class="d-flex justify-content-center flex-wrap" v-if="cards.length > 0">
 					<div class="mt-5 me-5 d-flex flex-column texto" style="z-index: 1">
 						<div class="add d-flex align-items-center"><b>Debit card</b></div>
 						<div
@@ -449,9 +465,9 @@
 
 										<div class="terms">
 											<p>
-												This card is property of Monzo Bank, Wonderland. Misuse is criminal offence.
-												If found, please return to Monzo Bank or to the nearest bank with MasterCard
-												logo.
+												This card is property of Monzo Bank, Wonderland. Misuse is
+												criminal offence. If found, please return to Monzo Bank or to the
+												nearest bank with MasterCard logo.
 											</p>
 											<p>Use of this card is subject to the credit card agreement.</p>
 										</div>
@@ -461,8 +477,12 @@
 							<div
 								:class="card.thruDate == fecha ? 'd-flex justify-content-between cardbuttons VENCIDA' : 'd-flex justify-content-between cardbuttons'"
 							>
-								<button class="m-3 p-2" @click="copy(card.number)">Copy card number</button>
-								<button class="m-3 p-2 deleteCard" @click="hiddeCard(card.id)">Delete</button>
+								<button class="m-3 p-2" @click="copy(card.number)">
+									Copy card number
+								</button>
+								<button class="m-3 p-2 deleteCard" @click="hiddeCard(card.id)">
+									Delete
+								</button>
 							</div>
 						</div>
 					</div>
@@ -641,9 +661,9 @@
 
 										<div class="terms">
 											<p>
-												This card is property of Monzo Bank, Wonderland. Misuse is criminal offence.
-												If found, please return to Monzo Bank or to the nearest bank with MasterCard
-												logo.
+												This card is property of Monzo Bank, Wonderland. Misuse is
+												criminal offence. If found, please return to Monzo Bank or to the
+												nearest bank with MasterCard logo.
 											</p>
 											<p>Use of this card is subject to the credit card agreement.</p>
 										</div>
@@ -653,8 +673,12 @@
 							<div
 								:class="card.thruDate == fecha ? 'd-flex justify-content-between cardbuttons VENCIDA' : 'd-flex justify-content-between cardbuttons'"
 							>
-								<button class="m-3 p-2" @click="copy(card.number)">Copy card number</button>
-								<button class="m-3 p-2 deleteCard" @click="hiddeCard(card.id)">Delete</button>
+								<button class="m-3 p-2" @click="copy(card.number)">
+									Copy card number
+								</button>
+								<button class="m-3 p-2 deleteCard" @click="hiddeCard(card.id)">
+									Delete
+								</button>
 							</div>
 						</div>
 					</div>
@@ -669,7 +693,10 @@
 							Request your credit/debit card
 						</button>
 					</div>
-					<div class="card rounded shadow d-flex align-items-center justify-content-center" v-else>
+					<div
+						class="card rounded shadow d-flex align-items-center justify-content-center"
+						v-else
+					>
 						<p><b>You already requested a card! Wait for his arrival 😊</b></p>
 					</div>
 				</div>
@@ -690,11 +717,15 @@
 				<p>Copyright ® 2022 . Al rights reserved</p>
 			</div>
 			<div class="col-5 d-flex justify-content-end justify-content-evenly redes">
-				<a href="mailto:guillebonutto@hotmail.com"><i class="far fa-envelope fa-2x"></i></a>
+				<a href="mailto:guillebonutto@hotmail.com"
+					><i class="far fa-envelope fa-2x"></i
+				></a>
 				<a href="http://www.facebook.com" target="_blank"
 					><i class="fab fa-facebook-square fa-2x"></i
 				></a>
-				<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="http://www.twitter.com" target="_blank"
+					><i class="fab fa-twitter fa-2x"></i
+				></a>
 				<a href="http://www.instagram.com" target="_blank"
 					><i class="fab fa-instagram fa-2x"></i
 				></a>
