--- a/src/main/resources/static/web/help.html
+++ b/src/main/resources/static/web/help.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -37,7 +44,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -202,7 +214,9 @@
 				</div>
 			</header>
 			<main class="mb-5">
-				<div class="d-flex justify-content-end align-items-center mt-2 me-3 form-check form-switch">
+				<div
+					class="d-flex justify-content-end align-items-center mt-2 me-3 form-check form-switch"
+				>
 					<input
 						class="form-check-input"
 						type="checkbox"
@@ -227,7 +241,9 @@
 							<path
 								d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
 							/>
-							<path d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2" />
+							<path
+								d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
+							/>
 							<path d="M19 11h2m-1 -1v2" />
 						</svg>
 					</p>
@@ -253,7 +269,7 @@
 					<form
 						@submit="disableDefault()"
 						id="app"
-						class="w-50 g-3 needs-validation"
+						class="form-help g-3 needs-validation"
 						style="margin-top: 100px; margin-bottom: 100px"
 					>
 						<fieldset class="p-3">
@@ -282,7 +298,13 @@
 								</div>
 								<div class="d-flex flex-column">
 									<label for="email">E-mail:</label>
-									<input id="email" placeholder="E-mail" class="mb-2" type="mail" required />
+									<input
+										id="email"
+										placeholder="E-mail"
+										class="mb-2"
+										type="mail"
+										required
+									/>
 								</div>
 								<textarea
 									name="Comment"
@@ -292,7 +314,9 @@
 								</textarea>
 							</div>
 							<div class="btn-form d-flex justify-content-end">
-								<button id="boton" class="boton m-3 p-2" v-on:click="SendForm()">Send</button>
+								<button id="boton" class="boton m-3 p-2" v-on:click="SendForm()">
+									Send
+								</button>
 							</div>
 						</fieldset>
 					</form>
