--- a/src/main/resources/static/web/loan-admin.html
+++ b/src/main/resources/static/web/loan-admin.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +43,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -200,7 +212,9 @@
 					</div>
 				</div>
 			</header>
-			<div class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch">
+			<div
+				class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch"
+			>
 				<!-- <label for="día">Día</label> -->
 				<input
 					class="form-check-input"
@@ -284,27 +298,59 @@
 									<label for="selectMonth">Dues</label>
 									<div class="flexbox">
 										<div class="group-select">
-											<input type="text" v-model="due1" @change="addDues(due1)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due1"
+												@change="addDues(due1)"
+												placeholder="0"
+											/>
 										</div>
 										<div class="group-select">
-											<input type="text" v-model="due2" @change="addDues(due2)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due2"
+												@change="addDues(due2)"
+												placeholder="0"
+											/>
 										</div>
 										<div class="group-select">
-											<input type="text" v-model="due3" @change="addDues(due3)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due3"
+												@change="addDues(due3)"
+												placeholder="0"
+											/>
 										</div>
 										<div class="group-select">
-											<input type="text" v-model="due4" @change="addDues(due4)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due4"
+												@change="addDues(due4)"
+												placeholder="0"
+											/>
 										</div>
 										<div class="group-select">
-											<input type="text" v-model="due5" @xhange="addDues(due5)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due5"
+												@xhange="addDues(due5)"
+												placeholder="0"
+											/>
 										</div>
 										<div class="group-select">
-											<input type="text" v-model="due6" @change="addDues(due6)" placeholder="0" />
+											<input
+												type="text"
+												v-model="due6"
+												@change="addDues(due6)"
+												placeholder="0"
+											/>
 										</div>
 									</div>
 								</div>
 							</div>
-							<button type="button" class="btn-enviar mt-4" @click="createLoan">Create Loan</button>
+							<button type="button" class="btn-enviar mt-4" @click="createLoan">
+								Create Loan
+							</button>
 						</form>
 					</div>
 				</div>
@@ -326,11 +372,15 @@
 				<p>Copyright ® 2022 . Al rights reserved</p>
 			</div>
 			<div class="col-5 d-flex justify-content-end justify-content-evenly redes">
-				<a href="mailto:guillebonutto@hotmail.com"><i class="far fa-envelope fa-2x"></i></a>
+				<a href="mailto:guillebonutto@hotmail.com"
+					><i class="far fa-envelope fa-2x"></i
+				></a>
 				<a href="http://www.facebook.com" target="_blank"
 					><i class="fab fa-facebook-square fa-2x"></i
 				></a>
-				<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="http://www.twitter.com" target="_blank"
+					><i class="fab fa-twitter fa-2x"></i
+				></a>
 				<a href="http://www.instagram.com" target="_blank"
 					><i class="fab fa-instagram fa-2x"></i
 				></a>
