--- a/src/main/resources/static/web/loan-application.html
+++ b/src/main/resources/static/web/loan-application.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +43,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -200,7 +212,9 @@
 					</div>
 				</div>
 			</header>
-			<div class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch">
+			<div
+				class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch"
+			>
 				<!-- <label for="día">Día</label> -->
 				<input
 					class="form-check-input"
@@ -273,14 +287,28 @@
 								</select>
 							</div>
 							<div class="flexbox">
-								<select name="" id="" class="mt-2" v-model="loanSelected" @change="filter">
+								<select
+									name=""
+									id=""
+									class="mt-2"
+									v-model="loanSelected"
+									@change="filter"
+								>
 									<option disabled>Select loan type</option>
 									<option v-for="loan in loans">{{loan.name}}</option>
 								</select>
-								<p class="ms-2 mb-0 col-1" v-if="balance > 0">Max amount: $ {{balance}}</p>
+								<p class="ms-2 mb-0 col-1" v-if="balance > 0">
+									Max amount: $ {{balance}}
+								</p>
 							</div>
 							<div class="group">
-								<select name="" id="" class="mt-2" v-model="dueSelected" @change="Update()">
+								<select
+									name=""
+									id=""
+									class="mt-2"
+									v-model="dueSelected"
+									@change="Update()"
+								>
 									<option disabled>Select due</option>
 									<option v-for="due in dues">{{due}}</option>
 								</select>
@@ -300,7 +328,8 @@
 												@keyup.enter="enter('amount')"
 											/>
 										</div>
-										<label v-if="dueSelected != 'Select due' && amount >= 0 && dueSelected != ''"
+										<label
+											v-if="dueSelected != 'Select due' && amount >= 0 && dueSelected != ''"
 											>Amount+<a
 												class="interest"
 												@mouseover="showInterestDetails"
@@ -315,11 +344,15 @@
 							<div :class="'tooltipInterest ' + active">
 								<p style="font-size: 15px"><b>Interest details:</b></p>
 								<div class="d-flex justify-content-between">
-									<p class="m-0" style="font-size: 14px">Interest %{{percentage.substring(2)}}</p>
+									<p class="m-0" style="font-size: 14px">
+										Interest %{{percentage.substring(2)}}
+									</p>
 									<p class="m-0">$ {{interest}}</p>
 								</div>
 							</div>
-							<button type="button" class="btn-enviar" @click="createTransfer">Apply Loan</button>
+							<button type="button" class="btn-enviar" @click="createTransfer">
+								Apply Loan
+							</button>
 						</form>
 					</div>
 				</div>
@@ -341,11 +374,15 @@
 				<p>Copyright ® 2022 . Al rights reserved</p>
 			</div>
 			<div class="col-5 d-flex justify-content-end justify-content-evenly redes">
-				<a href="mailto:guillebonutto@hotmail.com"><i class="far fa-envelope fa-2x"></i></a>
+				<a href="mailto:guillebonutto@hotmail.com"
+					><i class="far fa-envelope fa-2x"></i
+				></a>
 				<a href="http://www.facebook.com" target="_blank"
 					><i class="fab fa-facebook-square fa-2x"></i
 				></a>
-				<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="http://www.twitter.com" target="_blank"
+					><i class="fab fa-twitter fa-2x"></i
+				></a>
 				<a href="http://www.instagram.com" target="_blank"
 					><i class="fab fa-instagram fa-2x"></i
 				></a>
