--- a/src/main/resources/static/web/transfers.html
+++ b/src/main/resources/static/web/transfers.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +43,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -230,7 +242,9 @@
 								<path
 									d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
 								/>
-								<path d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2" />
+								<path
+									d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
+								/>
 								<path d="M19 11h2m-1 -1v2" />
 							</svg>
 						</p>
@@ -279,7 +293,11 @@
 							<div class="flexbox d-flex align-items-center">
 								<select name="" id="" v-model="currentaccount" @change="accountSelected">
 									<option disabled>Select current account</option>
-									<option v-for="current in accounts1" v-if="current.balance == 0" disabled>
+									<option
+										v-for="current in accounts1"
+										v-if="current.balance == 0"
+										disabled
+									>
 										{{current.number}} - ${{current.balance}}
 									</option>
 									<option v-else>{{current.number}}</option>
@@ -287,7 +305,11 @@
 								<p class="ms-2 mb-0 col-1" v-if="balance.length > 0">
 									$ {{balance[0].balance.toFixed(2)}}
 								</p>
-								<p class="transferAll ms-2 mb-0" v-if="balance.length > 0" @click="transferAll()">
+								<p
+									class="transferAll ms-2 mb-0"
+									v-if="balance.length > 0"
+									@click="transferAll()"
+								>
 									Transfer All
 								</p>
 							</div>
@@ -356,11 +378,15 @@
 				<p>Copyright ® 2022 . Al rights reserved</p>
 			</div>
 			<div class="col-3 d-flex justify-content-end justify-content-evenly redes">
-				<a href="mailto:guillebonutto@hotmail.com"><i class="far fa-envelope fa-2x"></i></a>
+				<a href="mailto:guillebonutto@hotmail.com"
+					><i class="far fa-envelope fa-2x"></i
+				></a>
 				<a href="http://www.facebook.com" target="_blank"
 					><i class="fab fa-facebook-square fa-2x"></i
 				></a>
-				<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="http://www.twitter.com" target="_blank"
+					><i class="fab fa-twitter fa-2x"></i
+				></a>
 				<a href="http://www.instagram.com" target="_blank"
 					><i class="fab fa-instagram fa-2x"></i
 				></a>
