--- a/src/main/resources/static/web/cards.html
+++ b/src/main/resources/static/web/cards.html
@@ -289,8 +289,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center flex-wrap" v-if="cards.length > 0">
-					<div class="mt-5 me-5 d-flex flex-column texto" style="z-index: 1">
+				<div class="d-flex justify-content-around flex-wrap" v-if="cards.length > 0">
+					<div class="mt-5 d-flex flex-column texto" style="z-index: 1">
 						<div class="add d-flex align-items-center"><b>Debit card</b></div>
 						<div
 							v-for="card in debit"
