--- a/src/main/resources/static/web/postnet.html
+++ b/src/main/resources/static/web/postnet.html
@@ -211,8 +211,6 @@
 						</div>
 					</div>
 				</div>
-			</header>
-			<main class="d-flex flex-column justify-content-center justify-content-between">
 				<div>
 					<div
 						class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch"
@@ -267,6 +265,8 @@
 						</li>
 					</ul>
 				</div>
+			</header>
+			<main class="d-flex flex-column justify-content-center">
 				<div class="d-flex align-items-center">
 					<div class="container d-flex justify-content-center">
 						<form id="formulario-tarjeta" class="formulario-tarjeta">
