--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -14,282 +14,306 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body id="body1">
-		<div class="div-spinner" v-show="loadingPage == true">
-			<div class="d-flex flex-column align-items-center">
-				<div class="spinner" v-show="loadingPage"></div>
-				<p class="mt-2">Loading</p>
-			</div>
-		</div>
-		<header>
-			<label for="" class="icon-equis"></label>
-			<div class="d-flex justify-content-end mt-2 me-3 form-check form-switch">
-				<!-- <label for="día">Día</label> -->
-				<input
-					class="form-check-input"
-					type="checkbox"
-					role="switch"
-					id="check"
-					onchange="chequeo()"
-				/>
-				<p for="noche" class="ms-2" id="noche">Noche</p>
-			</div>
-		</header>
-		<main id="app">
-			<div id="sidemenu" :class="collap + ' animate__animated animate__fadeInLeftBig'">
-				<div class="btn-menu" @click="check"></div>
-				<div class="cont-menu">
-					<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-						<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
-						<h1>Ecobank</h1>
-					</div>
-					<div class="cont-client">
-						<img src="" id="photo" alt="photo" />
-					</div>
-					<div id="profile">
-						<ul class="d-flex flex-column align-items-center">
-							<li>
-								<b><u>{{firstName}} {{lastName}}</u></b>
-							</li>
-							<li>{{emailMenu}}</li>
-						</ul>
-					</div>
-					<nav class="navbar-cuentas">
-						<a href="accounts.html">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-list-numbers"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<path d="M11 6h9" />
-								<path d="M11 12h9" />
-								<path d="M12 18h8" />
-								<path d="M4 16a2 2 0 1 1 4 0c0 .591 -.5 1 -1 1.5l-3 2.5h4" />
-								<path d="M6 10v-6l-2 2" />
-							</svg>
-							Accounts
-						</a>
-						<a href="cards.html">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-credit-card"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<rect x="3" y="5" width="18" height="14" rx="3" />
-								<line x1="3" y1="10" x2="21" y2="10" />
-								<line x1="7" y1="15" x2="7.01" y2="15" />
-								<line x1="11" y1="15" x2="13" y2="15" />
-							</svg>
-							Cards
-						</a>
-						<a href="transfers.html">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-help"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<circle cx="12" cy="12" r="9" />
-								<line x1="12" y1="17" x2="12" y2="17.01" />
-								<path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
-							</svg>
-							Transfers
-						</a>
-						<a href="buy-sell.html">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-currency-dollar"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<path
-									d="M16.7 8a3 3 0 0 0 -2.7 -2h-4a3 3 0 0 0 0 6h4a3 3 0 0 1 0 6h-4a3 3 0 0 1 -2.7 -2"
-								/>
-								<path d="M12 3v3m0 12v3" />
-							</svg>
-							Buy-sell Dollars
-						</a>
-						<a @click="redirectIfExist('agree&conditions')">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-user-check"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<circle cx="9" cy="7" r="4" />
-								<path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-								<path d="M16 11l2 2l4 -4" />
-							</svg>
-							Agree and conditions
-						</a>
-						<a class="ayuda" @click="redirectIfExist('help')">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								class="icon icon-tabler icon-tabler-help"
-								width="20"
-								height="20"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="#e2f5ff"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<circle cx="12" cy="12" r="9" />
-								<line x1="12" y1="17" x2="12" y2="17.01" />
-								<path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
-							</svg>
-							Help
-						</a>
-					</nav>
-					<a class="cerrar-sesion" @click="signOut()">
-						<i class="fa-solid fa-arrow-right-from-bracket"></i>Sign out</a
-					>
-					<div class="equis" @click="check()">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							class="icon icon-tabler icon-tabler-x"
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="#ffffff"
-							fill="none"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-						>
-							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-							<line x1="18" y1="6" x2="6" y2="18" />
-							<line x1="6" y1="6" x2="18" y2="18" />
-						</svg>
-					</div>
+		<div id="app">
+			<div class="div-spinner" v-show="loadingPage == true">
+				<div class="d-flex flex-column align-items-center">
+					<div class="spinner" v-show="loadingPage"></div>
+					<p class="mt-2">Loading</p>
 				</div>
 			</div>
-			<div class="div-principal texto">
-				<div class="div-sec">
-					<section class="section1">
-						<h2>Client Manager</h2>
-						<form autocomplete="off" @submit="disableDefault()">
-							<fieldset>
-								<div class="form">
-									<input type="text" id="input" v-model="name" required @change="chequeo()" />
-									<label for="name"><span id="span">Name</span></label>
-								</div>
-								<div class="form">
-									<input type="text" id="input" v-model="surname" required />
-									<label for="lastname"><span id="span">Last name:</span></label>
-								</div>
-								<div class="form">
-									<input type="text" id="input" v-model="email" required />
-									<label for="email"><span id="span">Email address:</span></label>
-								</div>
-								<button type="button" class="btn mt-3 mb-3" @click="postClient()">
-									Add Client
-								</button>
-							</fieldset>
-						</form>
-					</section>
-					<section>
-						<h2>Client list</h2>
-						<table class="texto table table-bordered">
-							<thead>
-								<tr>
-									<th>First Name</th>
-									<th>Last Name</th>
-									<th colspan="2">Email</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr v-for="person in clients">
-									<td>{{person.firstName}}</td>
-									<td>{{person.lastName}}</td>
-									<td>{{person.email}}</td>
-									<td class="eliminar" @click="deleteClient(person)">❌</td>
-								</tr>
-							</tbody>
-						</table>
-					</section>
-					<section v-if="loans.length > 0">
-						<div class="mt-5 mb-2 d-flex loanstitle border-top border-3">
-							<h2 class="mt-5 mb-0 me-3">Loans</h2>
-							<a href="/web/loan-admin.html" class="d-flex align-items-center"
-								><b>Apply for loans</b></a
-							>
+			<header>
+				<label for="" class="icon-equis"></label>
+				<div class="d-flex justify-content-end mt-2 me-3 form-check form-switch">
+					<!-- <label for="día">Día</label> -->
+					<input
+						class="form-check-input"
+						type="checkbox"
+						role="switch"
+						id="check"
+						onchange="chequeo()"
+					/>
+					<p for="noche" class="ms-2" id="noche">Noche</p>
+				</div>
+			</header>
+			<main>
+				<div id="sidemenu" :class="collap + ' animate__animated animate__fadeInLeftBig'">
+					<div class="btn-menu" @click="check"></div>
+					<div class="cont-menu">
+						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
+							<h1>Ecobank</h1>
 						</div>
-						<div class="container d-flex flex-wrap mt-3">
-							<div class="me-4 card-body rounded shadow" v-for="loan in loans" style="z-index: 1">
-								<h5 class="card-title pb-4">{{loan.name}}</h5>
-								<p class="card-title">Amount: {{loan.amount}}</p>
-								<p class="card-title">Payments: {{loan.payments}}</p>
-								<p class="card-title">Monthly fee: {{loan.monthlyFee.toFixed(2)}}</p>
-							</div>
+						<div class="cont-client">
+							<img src="" id="photo" alt="photo" />
 						</div>
-					</section>
-					<section v-else>
-						<h2 class="mt-5 mb-4 border-top border-3">Loans</h2>
-						<div
-							class="container me-4 d-flex justify-content-center align-items-center card-body rounded shadow"
+						<div id="profile">
+							<ul class="d-flex flex-column align-items-center">
+								<li>
+									<b><u>{{firstName}} {{lastName}}</u></b>
+								</li>
+								<li>{{emailMenu}}</li>
+							</ul>
+						</div>
+						<nav class="navbar-cuentas">
+							<a href="accounts.html">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-list-numbers"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path d="M11 6h9" />
+									<path d="M11 12h9" />
+									<path d="M12 18h8" />
+									<path d="M4 16a2 2 0 1 1 4 0c0 .591 -.5 1 -1 1.5l-3 2.5h4" />
+									<path d="M6 10v-6l-2 2" />
+								</svg>
+								Accounts
+							</a>
+							<a href="cards.html">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-credit-card"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<rect x="3" y="5" width="18" height="14" rx="3" />
+									<line x1="3" y1="10" x2="21" y2="10" />
+									<line x1="7" y1="15" x2="7.01" y2="15" />
+									<line x1="11" y1="15" x2="13" y2="15" />
+								</svg>
+								Cards
+							</a>
+							<a href="transfers.html">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-help"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<circle cx="12" cy="12" r="9" />
+									<line x1="12" y1="17" x2="12" y2="17.01" />
+									<path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
+								</svg>
+								Transfers
+							</a>
+							<a href="buy-sell.html">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-currency-dollar"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<path
+										d="M16.7 8a3 3 0 0 0 -2.7 -2h-4a3 3 0 0 0 0 6h4a3 3 0 0 1 0 6h-4a3 3 0 0 1 -2.7 -2"
+									/>
+									<path d="M12 3v3m0 12v3" />
+								</svg>
+								Buy-sell Dollars
+							</a>
+							<a @click="redirectIfExist('agree&conditions')">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-user-check"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<circle cx="9" cy="7" r="4" />
+									<path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+									<path d="M16 11l2 2l4 -4" />
+								</svg>
+								Agree and conditions
+							</a>
+							<a class="ayuda" @click="redirectIfExist('help')">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									class="icon icon-tabler icon-tabler-help"
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="#e2f5ff"
+									fill="none"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+									<circle cx="12" cy="12" r="9" />
+									<line x1="12" y1="17" x2="12" y2="17.01" />
+									<path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
+								</svg>
+								Help
+							</a>
+						</nav>
+						<a class="cerrar-sesion" @click="signOut()">
+							<i class="fa-solid fa-arrow-right-from-bracket"></i>Sign out</a
 						>
-							<h5 class="m-5 card-title">
-								You do not have loans at the moment
+						<div class="equis" @click="check()">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								class="icon icon-tabler icon-tabler-x"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="#ffffff"
+								fill="none"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+							>
+								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+								<line x1="18" y1="6" x2="6" y2="18" />
+								<line x1="6" y1="6" x2="18" y2="18" />
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="div-principal texto">
+					<div class="div-sec">
+						<section class="section1">
+							<h2>Client Manager</h2>
+							<form autocomplete="off">
+								<fieldset>
+									<div class="form">
+										<input
+											type="text"
+											id="input"
+											v-model="name"
+											required
+											@change="chequeo()"
+										/>
+										<label for="name"><span id="span">Name</span></label>
+									</div>
+									<div class="form">
+										<input type="text" id="input" v-model="surname" required />
+										<label for="lastname"><span id="span">Last name:</span></label>
+									</div>
+									<div class="form">
+										<input type="text" id="input" v-model="email" required />
+										<label for="email"><span id="span">Email address:</span></label>
+									</div>
+									<button type="button" class="btn mt-3 mb-3" @click="postClient">
+										Add Client
+									</button>
+								</fieldset>
+							</form>
+						</section>
+						<section>
+							<h2>Client list</h2>
+							<table class="texto table table-bordered">
+								<thead>
+									<tr>
+										<th>First Name</th>
+										<th>Last Name</th>
+										<th colspan="2">Email</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr v-for="person in clients">
+										<td>{{person.firstName}}</td>
+										<td>{{person.lastName}}</td>
+										<td>{{person.email}}</td>
+										<td class="eliminar" @click="deleteClient(person)">❌</td>
+									</tr>
+								</tbody>
+							</table>
+						</section>
+						<section v-if="loans.length > 0">
+							<div class="mt-5 mb-2 d-flex loanstitle border-top border-3">
+								<h2 class="mt-5 mb-0 me-3">Loans</h2>
 								<a href="/web/loan-admin.html" class="d-flex align-items-center"
 									><b>Apply for loans</b></a
 								>
-							</h5>
-						</div>
-					</section>
+							</div>
+							<div class="container d-flex flex-wrap mt-3">
+								<div
+									class="me-4 card-body rounded shadow"
+									v-for="loan in loans"
+									style="z-index: 1"
+								>
+									<h5 class="card-title pb-4">{{loan.name}}</h5>
+									<p class="card-title">Amount: {{loan.amount}}</p>
+									<p class="card-title">Payments: {{loan.payments}}</p>
+									<p class="card-title">Monthly fee: {{loan.monthlyFee.toFixed(2)}}</p>
+								</div>
+							</div>
+						</section>
+						<section v-else>
+							<h2 class="mt-5 mb-4 border-top border-3">Loans</h2>
+							<div
+								class="container me-4 d-flex justify-content-center align-items-center card-body rounded shadow"
+							>
+								<h5 class="m-5 card-title">
+									You do not have loans at the moment
+									<a href="/web/loan-admin.html" class="d-flex align-items-center"
+										><b>Apply for loans</b></a
+									>
+								</h5>
+							</div>
+						</section>
+					</div>
+					<div>
+						<section class="jason">
+							<h2>Client REST Response</h2>
+							<pre>{{json}}</pre>
+						</section>
+					</div>
 				</div>
-				<div>
-					<section class="jason">
-						<h2>Client REST Response</h2>
-						<pre>{{json}}</pre>
-					</section>
-				</div>
-			</div>
-		</main>
+			</main>
+		</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
