--- a/src/main/resources/static/web/buy-sell.html
+++ b/src/main/resources/static/web/buy-sell.html
@@ -14,10 +14,17 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Lobster"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +43,12 @@
 					<div class="btn-menu" @click="check"></div>
 					<div class="cont-menu">
 						<div class="pt-3 d-flex flex-column align-items-center" id="titulo">
-							<img src="../images/images-removebg-preview.png" alt="logo" id="logo" width="40rem" />
+							<img
+								src="../images/images-removebg-preview.png"
+								alt="logo"
+								id="logo"
+								width="40rem"
+							/>
 							<h1>Ecobank</h1>
 						</div>
 						<div class="cont-client">
@@ -201,7 +213,9 @@
 				</div>
 			</header>
 			<main>
-				<div class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch">
+				<div
+					class="d-flex justify-content-end align-items-center mt-2 me-2 form-check form-switch"
+				>
 					<!-- <label for="día">Día</label> -->
 					<input
 						class="form-check-input"
@@ -227,7 +241,9 @@
 							<path
 								d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
 							/>
-							<path d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2" />
+							<path
+								d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
+							/>
 							<path d="M19 11h2m-1 -1v2" />
 						</svg>
 					</p>
@@ -249,7 +265,7 @@
 						<a class="nav-link" href="help.html">Help</a>
 					</li>
 				</ul>
-				<div class="container d-flex justify-content-center">
+				<div class="d-flex justify-content-center">
 					<div class="p-5 container contenedor1 d-flex justify-content-around">
 						<div class="buy d-flex flex-column justify-content-around align-items-center">
 							<p>Buy</p>
@@ -257,11 +273,13 @@
 							<input type="text" v-show="buying" placeholder="Buy" v-model="amount" />
 							<button id="btnbuy" @click="buy">Buy</button>
 						</div>
-						<div class="sell d-flex flex-column justify-content-around align-items-center">
+						<div
+							class="sell d-flex flex-column justify-content-around align-items-center"
+						>
 							<p>Sell</p>
 							<p><b>{{dolarVenta}}</b></p>
-							<input type="text" v-show="selling" placeholder="Vender" />
-							<button id="btnsell" @Click="sell">Vender</button>
+							<input type="text" v-show="selling" placeholder="Sell" />
+							<button id="btnsell" @Click="sell">Sell</button>
 						</div>
 					</div>
 				</div>
@@ -275,6 +293,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="../lib/buy-sell.js"></script>
 		<footer class="p-4 d-flex footer justify-content-between align-items-center">
 			<div class="col-5">
@@ -282,11 +301,15 @@
 				<p>Copyright ® 2022 . Al rights reserved</p>
 			</div>
 			<div class="col-5 d-flex justify-content-end justify-content-evenly redes">
-				<a href="mailto:guillebonutto@hotmail.com"><i class="far fa-envelope fa-2x"></i></a>
+				<a href="mailto:guillebonutto@hotmail.com"
+					><i class="far fa-envelope fa-2x"></i
+				></a>
 				<a href="http://www.facebook.com" target="_blank"
 					><i class="fab fa-facebook-square fa-2x"></i
 				></a>
-				<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="http://www.twitter.com" target="_blank"
+					><i class="fab fa-twitter fa-2x"></i
+				></a>
 				<a href="http://www.instagram.com" target="_blank"
 					><i class="fab fa-instagram fa-2x"></i
 				></a>
